k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svr

spec:
  selector:
    app: webapp

  ports:
    - name: http
      port: 4000
      nodePort: 30400

  type: NodePort
