k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-svr
                port: 
                  number: 4000
